Update interface to better work on RPi ReTerminal Device and Modern PCs